--- a/index.html
+++ b/index.html
@@ -8,65 +8,79 @@
     <title>Plano Inclinado</title>
 </head>
 <body>
-   <header>
-       <div class="container">
-            <nav class="menu">
-                <ul class="componentes">
-                    <a href="index.html">
-                        <li> Home </li>
-                    </a>
-                    <a href="exercicios.html">
-                        <li> Exercicios </li>
-                    </a>
-                    <a href="conclusão.html">
-                        <li> Conclusão </li>
-                    </a>
-                </ul>            
-            </nav>
-        </div>
-    </header>
-    <section id="main">
-      <div class="container">
-        <article id="main-col">
-          <h1 class="page-title">Introdução</h1>
-          <p>O intuito desse site é explicar e apresentar o que é o plano inclinado e quais são a suas implicações.</p>
-          <ul id="services">
-            <li>
-              <h3>Definição</h3>
-              <p> Plano inclinado é uma máquina simples que consiste em uma superfície inclinada em um certo ângulo em relação à direção horizontal.<br><br>
+  <header>
+    <div class="container">
+      <nav class="menu">
+        <ul class="componentes">
+        	<a href="index.html">
+            <li> Home </li>
+          </a>
+          <a href="exercicios.html">
+          	<li> Exercicios </li>
+          </a>
+          <a href="conclusão.html">
+            <li> Conclusão </li>
+          </a>
+        </ul>            
+      </nav>
+    </div>
+  </header>
+  <section id="main">
+    <div class="container">
+      <article id="main-col">
+        <h1 class="page-title">Introdução</h1>
+        <p>Este site foi desenvolvido com o objetivo de expôr os conceitos fundamentais referentes à matéria de plano inclinado através de uma aplicação Web. Abaixo se encontram as devidas explicações acerca do assunto, bem como três atividades com suas resoluções.</p>
+        <ul id="services">
+          <li>
+            <h3>Definição</h3>
+            <p> Plano inclinado é uma máquina simples que consiste em uma superfície inclinada em um certo ângulo em relação à direção horizontal.<br><br>
 
-O plano inclinado é uma máquina simples que pode ser usada para decompor a intensidade da força que é aplicada em alguma direção. Está presente em rampas, parafusos, cunhas, facas etc. O estudo do plano inclinado envolve o conhecimento de vetores e é uma das mais importantes aplicações das leis de Newton.</p>
-            </li>
-            <li>
-              <h3>Teoria sobre Plano Inclinado</h3>
-              <p>
-Quando um objeto é apoiado sobre o plano inclinado, a força peso que o puxa em direção ao centro da Terra é dividida em duas componentes, chamadas de Px e Py, distribuídas ao longo das direções horizontal e vertical. Dessa maneira, torna-se mais fácil elevar um objeto pesado ao longo do plano inclinado, pois a força que precisa ser aplicada ao corpo é menor do que na situação em que se eleva esse corpo a uma certa altura, movendo-se exclusivamente na direção vertical.<br><br>
+            O plano inclinado é uma máquina simples que pode ser usada para decompor a intensidade da força que é aplicada em alguma direção. Está presente em rampas, parafusos, cunhas, facas etc. O estudo do plano inclinado envolve o conhecimento de vetores e é uma das mais importantes aplicações das leis de Newton.</p>
+            <img src="pi1.jpeg">
+          </li>
+          <li>
+            <h3>Teoria sobre Plano Inclinado</h3>
+            <p>
+            Quando um objeto é apoiado sobre o plano inclinado, a força peso que o puxa em direção ao centro da Terra é dividida em duas componentes, chamadas de Px e Py, distribuídas ao longo das direções horizontal e vertical. Dessa maneira, torna-se mais fácil elevar um objeto pesado ao longo do plano inclinado, pois a força que precisa ser aplicada ao corpo é menor do que na situação em que se eleva esse corpo a uma certa altura, movendo-se exclusivamente na direção vertical.<br><br>
 
-Apesar de a força necessária para elevar um corpo sobre um plano inclinado ser menor do que a força para elevá-lo verticalmente, a energia consumida é a mesma, uma vez que a distância a ser percorrida também aumenta. Para entender isso, basta pensar no trabalho realizado sobre o corpo, que depende do produto entre força e distância percorrida.<br><br>
+            Apesar de a força necessária para elevar um corpo sobre um plano inclinado ser menor do que a força para elevá-lo verticalmente, a energia consumida é a mesma, uma vez que a distância a ser percorrida também aumenta. Para entender isso, basta pensar no trabalho realizado sobre o corpo, que depende do produto entre força e distância percorrida.<br><br>
 
-Na situação mais simples entre os planos inclinados, há a ação de apenas duas forças: peso e normal. Essa situação está ilustrada na figura a seguir:<br><br>
+            Na situação mais simples entre os planos inclinados, há a ação de apenas duas forças: peso e normal. Essa situação está ilustrada na figura a seguir:<br><br>
 
-Para facilitar os cálculos, o referencial adotado para o estudo do plano inclinado também é inclinado de um certo ângulo θ com relação à direção horizontal, de modo que a direção x do referencial seja paralela ao plano inclinado.</p>
-						  </li>
-						  <li>
-              <h3>Fórmulas do plano inclunado:</h3>
-              <p>
-Para resolvermos exercícios que envolvem as forças que atuam em um corpo apoiado sobre um plano inclinado, devemos aplicar a 2ª lei de Newton tanto para a direção x quanto para a direção y. Igualando o resultado a 0, quando o corpo está em repouso ou deslizando com velocidade constante, ou ao produto da massa pela aceleração.<br><br>
+            Para facilitar os cálculos, o referencial adotado para o estudo do plano inclinado também é inclinado de um certo ângulo θ com relação à direção horizontal, de modo que a direção x do referencial seja paralela ao plano inclinado.</p>
+            <img src="pi8.jpeg">
+					</li>
+					<li>
+            <h3>Fórmulas do plano inclunado:</h3>
+            <p> Para resolvermos exercícios que envolvem as forças que atuam em um corpo apoiado sobre um plano inclinado, devemos aplicar a 2ª lei de Newton tanto para a direção x quanto para a direção y. Igualando o resultado a 0, quando o corpo está em repouso ou deslizando com velocidade constante, ou ao produto da massa pela aceleração.<br><br>
 
-Na direção x do plano inclinado da figura, há apenas uma força atuando, a componente x do peso, portanto ela é igual à força resultante sobre o corpo na direção x.<br><br>
+						<img src="pi7.jpeg"><br><br>
 
-Uma vez que Px é o cateto oposto ao ângulo θ, ele é igual ao produto do peso pelo seno do ângulo θ. Além disso, de acordo com o resultado obtido, o bloco que se encontra apoiado sobre o plano inclinado está sujeito a uma aceleração menor que a aceleração da gravidade.<br><br>
+						Na direção x do plano inclinado da figura, há apenas uma força atuando, a componente x do peso, portanto ela é igual à força resultante sobre o corpo na direção x.<br><br>
 
-Na direção y, temos a ação da força normal e da componente y do peso, que, nesse caso, cancelam-se.</p>
-            </li>
-            <li>
-              <h3>Plano Inclinado com Atrito</h3>
-              <p>
-O plano inclinado com atrito é aquele em que a superfície inclinada não é perfeitamente lisa, mas apresenta um certo coeficiente de atrito (μ). Quando um bloco está em repouso sobre o plano inclinado, a força de atrito aponta na direção x do plano e com sentido oposto à componente x da força peso. Além disso, o módulo da força de atrito é diretamente proporcional ao coeficiente de atrito do plano multiplicado pelo módulo da força normal.</p>
-            </li>
-						  </ul>
-						 </article>
-						</div>
-					</section>
+						<img src="pi6.jpeg"><br><br>
+
+						Uma vez que Px é o cateto oposto ao ângulo θ, ele é igual ao produto do peso pelo seno do ângulo θ. Além disso, de acordo com o resultado obtido, o bloco que se encontra apoiado sobre o plano inclinado está sujeito a uma aceleração menor que a aceleração da gravidade.<br><br>
+
+						Na direção y, temos a ação da força normal e da componente y do peso, que, nesse caso, cancelam-se.</p>
+
+						<img src="pi5.jpeg"><br><br>
+							
+          </li>
+          <li>
+            <h3>Plano Inclinado com Atrito</h3>
+            <p> O plano inclinado com atrito é aquele em que a superfície inclinada não é perfeitamente lisa, mas apresenta um certo coeficiente de atrito (μ). Quando um bloco está em repouso sobre o plano inclinado, a força de atrito aponta na direção x do plano e com sentido oposto à componente x da força peso. Além disso, o módulo da força de atrito é diretamente proporcional ao coeficiente de atrito do plano multiplicado pelo módulo da força normal.</p>
+
+						<img src="pi4.jpeg"><br><br>
+							
+          </li>
+				</ul>
+			</article>
+		</div>
+	</section>
+  <footer>
+    Felipe Berlim e Heloiza Guasques
+    <p>2º D.S.</p>
+  </footer>
 </body>
 </html>
