--- a/exercicios.html
+++ b/exercicios.html
@@ -5,58 +5,67 @@
   <link rel="stylesheet" href="exercicios.html">
   <link rel="stylesheet" href="conclusão.html">
   <link rel="stylesheet" href="index.html">
-    <meta charset="UTF-8">
-    <title>Exercicios</title>
+  <meta charset="UTF-8">
+  <title>Exercicios</title>
 </head>
 <body>
   <header>
-       <div class="container">
-            <nav class="menu">
-                <ul class="componentes">
-                    <a href="index.html">
-                        <li> Home </li>
-                    </a>
-                    <a href="exercicios.html">
-                        <li> Exercicios </li>
-                    </a>
-                    <a href="conclusão.html">
-                        <li> Conclusão </li>
-                    </a>
-                </ul>            
-            </nav>
-        </div>
-    </header>
-    <div>
-      <h1>Questão 1</h1>
-      <p>Um corpo de 10 kg é apoiado sobre um plano inclinado de 45º com relação à direção horizontal. Determine o módulo aproximado da aceleração desenvolvida por esse corpo.
-
-Dados: √2 = 1,41.</p>
-    <ul>
-      <li>a) 8 m/s²</li>
-      <li>a) 7 m/s²</li>
-      <li>a) 6 m/s²</li>
-      <li>a) 5 m/s²</li>
-    </ul>
-    <h1>Resolução</h1>
-      <p>Para resolver o exercício, basta lembrar que a aceleração adquirida pelo plano inclinado está relacionada com a componente x de seu peso, portanto pode ser calculada facilmente a partir da fórmula a seguir:<br><br>
-
-
-
-Com base no cálculo feito acima, descobrimos que a aceleração que atua sobre o corpo é de aproximadamente 7 m/s², portanto a alternativa correta é a letra B.</p>
-<h1>Questão 2</h1>
-      <p>Um corpo é abandonado do repouso sobre um plano inclinado e desliza com aceleração de 5 m/s² em uma região onde a gravidade é igual a 10 m/s². O ângulo formado entre o plano e a direção horizontal é de:</p>
-    <ul>
-      <li>a) 90º</li>
-      <li>a) 60º</li>
-      <li>a) 30º</li>
-      <li>a) 15ºa</li>
-    </ul>
-    <h1>Resolução</h1>
-      <p>Vamos utilizar a fórmula que nos permite calcular a aceleração de um objeto que desliza livremente sobre um plano inclinado. Observe:<br><br>
-
-
-
-Com base no resultado encontrado para o seno do ângulo, igual a 0,5, e sabendo por meio da tabela de ângulos notáveis que tal ângulo é igual a 30º, a resposta correta é a letra C.</p>
+    <div class="container">
+      <nav class="menu">
+        <ul class="componentes">
+          <a href="index.html">
+            <li> Home </li>
+          </a>
+          <a href="exercicios.html">
+            <li> Exercicios </li>
+          </a>
+          <a href="conclusão.html">
+            <li> Conclusão </li>
+          </a>
+        </ul>            
+      </nav>
     </div>
-</body>
+  </header>
+    <section id="main">
+      <div class="container">
+        <article id="main-col">
+          <h1 class="page-title">Questão 1</h1>
+          <p>Um corpo de 10 kg é apoiado sobre um plano inclinado de 45º com relação à direção horizontal. Determine o módulo aproximado da aceleração desenvolvida por esse corpo.
+
+          Dados: √2 = 1,41.</p>
+          <ul>
+            <li>a) 8 m/s²</li>
+            <li>a) 7 m/s²</li>
+            <li>a) 6 m/s²</li>
+            <li>a) 5 m/s²</li>
+          </ul>
+          <h1>Resolução</h1>
+          <p>Para resolver o exercício, basta lembrar que a aceleração adquirida pelo plano inclinado está relacionada com a componente x de seu peso, portanto pode ser calculada facilmente a partir da fórmula a seguir:<br><br>
+
+          <img src="pi3.jpeg"><br>
+
+          <p>Com base no cálculo feito acima, descobrimos que a aceleração que atua sobre o corpo é de aproximadamente 7 m/s², portanto a alternativa correta é a letra B.</p>
+
+          <h1>Questão 2</h1>
+          <p>Um corpo é abandonado do repouso sobre um plano inclinado e desliza com aceleração de 5 m/s² em uma região onde a gravidade é igual a 10 m/s². O ângulo formado entre o plano e a direção horizontal é de:</p>
+          <ul>
+            <li>a) 90º</li>
+            <li>a) 60º</li>
+            <li>a) 30º</li>
+            <li>a) 15ºa</li>
+          </ul>
+          <h1>Resolução</h1>
+          <p>Vamos utilizar a fórmula que nos permite calcular a aceleração de um objeto que desliza livremente sobre um plano inclinado. Observe:<br><br>
+
+          <img src="pi2.jpeg"><br>
+
+          <p>Com base no resultado encontrado para o seno do ângulo, igual a 0,5, e sabendo por meio da tabela de ângulos notáveis que tal ângulo é igual a 30º, a resposta correta é a letra C.</p>
+        </article>
+      </div>
+    </section>
+    <footer>
+      Felipe Berlim e Heloiza Guasques
+      <p>2º D.S.</p>
+    </footer>
+  </body>
 </html>
