--- a/conclusão.html
+++ b/conclusão.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt">
-<head>
-    <meta charset="UTF-8">
-    <title>Título da página</title>
-</head>
-<body>
-    
+    <head>
+        <link rel="stylesheet" href="exercicios.html">
+        <link rel="stylesheet" href="conclusão.html">
+        <link rel="stylesheet" href="style.css">
+        <meta charset="UTF-8">
+        <title>Plano Inclinado</title>
+    </head>
+    <body>
+       <header>
+           <div class="container">
+                <nav class="menu">
+                    <ul class="componentes">
+                        <a href="index.html">
+                            <li> Home </li>
+                        </a>
+                        <a href="exercicios.html">
+                            <li> Exercicios </li>
+                        </a>
+                        <a href="conclusão.html">
+                            <li> Conclusão </li>
+                        </a>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <section id="main">
+            <div class="container">
+              <article id="main-col">
+                <h1 class="page-title">Conclusão</h1>
+                <p>Em conclusão, o trabalho realizado através deste site abordou os conceitos fundamentais, a prática e as características da matéria de plano inclinado. Entende-se, portanto, através do que foi exposto acima, que plano inclinado é a parte da dinâmica trabalha com o movimento em superfícies que formam um ângulo com o eixo horizontal, sendo úteis para reduzir a força necessária para mover um objeto verticalmente, tendo como exemplos práticos as rampas e as estradas.</p><br>
+                <h1 class="page-title">Referência</h1>
+                <p>https://brasilescola.uol.com.br/fisica/plano-inclinado.htm</p><br>
+                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+              </article>
+            </div>
+        </section>
+        <footer>
+            Felipe Berlim e Heloiza Guasques
+            <p>2º D.S.</p>
+        </footer>
 </body>
-</html>
+</html>s
